<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ba.unsa.etf.rma.marko_nedic.spirala1_17983.DodavanjeKnjigeAkt">


    <ImageView
        android:id="@+id/naslovnaStr"
        android:layout_width="263dp"
        android:layout_height="154dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/opisSlika"
        android:scaleType="fitXY"
      />

    <Button
        android:id="@+id/dNadjiSliku"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/sivaDugmad"
        android:text="@string/dNadjiSliku"
        tools:text="@string/dNadjiSliku"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/imeAutora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/autorHint"
        android:inputType="textPersonName"
        android:backgroundTint="@color/tekstLinija"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/nazivKnjige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nazivHint"
        android:inputType="textPersonName"
        android:backgroundTint="@color/tekstLinija"
        />

    <TextView
        android:id="@+id/opisSpiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/opisSpinera"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="@string/opisSpinera" />

    <Spinner
        android:id="@+id/sKategorijaKnjige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dUpisiKnjigu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/sivaDugmad"
        android:text="@string/upisiKnjigu" />

    <Button
        android:id="@+id/dPonisti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sivaDugmad"
        android:text="@string/tekstPonisti" />


</LinearLayout>

</ScrollView>