<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ba.unsa.etf.rma.marko_nedic.spirala1_17983.KategorijeAkt">

    <Button
        android:id="@+id/dKategorije"
        android:background="@drawable/okruglo_dugme"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/dDodajKategoriju"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/dDodajKategoriju"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dKategorijeText"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dKategorijeText" />

    <Button
        android:id="@+id/dAutori"
        android:background="@drawable/okruglo_dugme"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/dPretraga"
        android:layout_alignRight="@+id/dPretraga"
        android:layout_alignTop="@+id/dKategorije"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dAutoriText"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="218dp"
        tools:text="@string/dAutoriText" />

    <EditText
        android:id="@+id/tekstPretraga"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/dKategorije"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/tekstLinija"
        android:hint="@string/hintKategorija"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dKategorije"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="160dp" />

    <Button
        android:id="@+id/dPretraga"
        android:background="@drawable/okruglo_dugme"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tekstPretraga"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dugmePretraga"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dAutori"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="120dp"
        tools:text="@string/dugmePretraga" />

    <Button
        android:id="@+id/dDodajKategoriju"
        android:background="@drawable/okruglo_dugme"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/dugmeKategorija"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dPretraga"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="65dp"
        tools:text="@string/dugmeKategorija" />

    <Button
        android:id="@+id/dDodajKnjigu"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_alignEnd="@+id/dPretraga"
        android:layout_alignRight="@+id/dPretraga"
        android:layout_alignTop="@+id/dDodajKategoriju"
        android:layout_marginRight="20dp"
        android:background="@drawable/okruglo_dugme"
        android:text="@string/dugmeKnjiga"
        app:layout_constraintBottom_toBottomOf="@id/dDodajKategoriju"
        app:layout_constraintRight_toLeftOf="parent"
        tools:text="@string/dugmeKnjiga" />

    <Button
        android:id="@+id/dDodajOnline"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/okruglo_dugme"
        android:text="@string/dDodajOnline"
        app:layout_constraintBottom_toTopOf="@id/listaKategorija"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dDodajKnjigu"
        tools:text="@string/dDodajOnline" />

    <ListView
        android:id="@+id/listaKategorija"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/dDodajKategoriju"
        android:layout_marginTop="30dp"
        android:background="@color/sivaLista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dDodajOnline" />

</android.support.constraint.ConstraintLayout>

</ScrollView>